WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249635
[JSC] WebAssembly.Memory's buffer should not be growable / resizable
https://bugs.webkit.org/show_bug.cgi?id=249635
Summary
[JSC] WebAssembly.Memory's buffer should not be growable / resizable
Yusuke Suzuki
Reported
2022-12-19 22:29:56 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-19 22:30:10 PST
<
rdar://problem/103545248
>
Yusuke Suzuki
Comment 2
2022-12-19 22:31:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7901
EWS
Comment 3
2022-12-19 23:46:50 PST
Committed
258126@main
(d6903a56fc2a): <
https://commits.webkit.org/258126@main
> Reviewed commits have been landed. Closing PR #7901 and removing active labels.
Yusuke Suzuki
Comment 4
2023-01-09 06:00:18 PST
***
Bug 250307
has been marked as a duplicate of this bug. ***
Joonas Lipping
Comment 5
2023-08-09 23:50:06 PDT
Will growable/resizable WebAssembly.Memory be enabled in the future? I was about to report this as a bug, but bugzilla suggested the present ticket so I learned to my surprise that the behavior is intentional.
Yusuke Suzuki
Comment 6
2023-08-10 10:58:09 PDT
See
https://github.com/WebAssembly/spec/issues/1292
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug