[JSC] WebAssembly.Memory's buffer should not be growable / resizable https://bugs.webkit.org/show_bug.cgi?id=249635 rdar://103545248

Reviewed by Mark Lam.

While WebAssembly.Memory's "shared" backing-memory is actually growable,
we should say it is not growable since the integration plan is not defined yet,
and we are not having enough [AllowResizable] annotation in WebCore.

* JSTests/wasm/stress/wasm-shared-memory-growable.js: Added.
(assert.eq):
* Source/JavaScriptCore/runtime/ArrayBuffer.cpp:
(JSC::ArrayBuffer::createShared):
* Source/JavaScriptCore/runtime/ArrayBuffer.h:

Canonical link: https://commits.webkit.org/258126@main