Source/JavaScriptCore/runtime/ArrayBuffer.cpp
@@ -239,10 +239,7 @@ Ref<ArrayBuffer> ArrayBuffer::createFromBytes(const void* data, size_t byteLengt
 
 Ref<ArrayBuffer> ArrayBuffer::createShared(Ref<SharedArrayBufferContents>&& shared)
 {
-    void* memory = shared->data();
-    size_t sizeInBytes = shared->sizeInBytes(std::memory_order_seq_cst);
-    auto maxByteLength = shared->maxByteLength();
-    ArrayBufferContents contents(memory, sizeInBytes, maxByteLength, WTFMove(shared));
+    ArrayBufferContents contents(WTFMove(shared));
     return create(WTFMove(contents));
 }
 
